@@ -72,6 +72,7 @@ v4.2.13 (work-in-progress)
        setting absorption=0 in the enginecfg strings.
      * More consistent and useful serialisation of MiniMC source and geometry
        objects.
+     * Add NC::safe_str2uint and NC::StrView::toUint64.
      * ...
 
 v4.2.12 2026-01-05
